--- a/content/post/2015-07-23-r-rmarkdown.Rmd
+++ b/content/post/2015-07-23-r-rmarkdown.Rmd
@@ -1,10 +1,13 @@
 ---
 title: "Save your bike and avoid biking in the downtown area of Toronto"
 author: "Jinghan Yang"
-date: 2015-07-23T21:13:14-05:00
-bibliography: "references.bib"
-categories: ["R"]
-tags: ["R Markdown", "plot", "regression"]
+date: '2015-07-23T21:13:14-05:00'
+bibliography: references.bib
+categories: R
+tags:
+- R Markdown
+- plot
+- regression
 ---
 
 ```{r setup, include=FALSE}
